<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:text="@string/fragment_name_home"
                android:textSize="35sp"
                android:fontFamily="arial"
                android:paddingBottom="10dp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="#bfbfbf"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:fontFamily="Times New Roman"
                android:textColor="#000000"
                android:textSize="17sp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/basics"
                 />
            <Button
                android:id="@+id/button_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="arial"
                android:background="#cccccc"
                android:textSize="25sp"
                android:textColor="#000000"
                android:text="MORE SAMPLE PAPERS"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Setting up margins in MS word"
                android:layout_centerHorizontal="true"
                android:fontFamily="arial"
                android:textColor="#000000"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                />
            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/margins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/margins"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:fontFamily="arial"
                android:textColor="#000000"
                android:textSize="17sp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:fontFamily="arial"
                android:textColor="#000000"
                android:textSize="17sp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/abstract_basic"
                 />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Abstract Example"
                android:fontFamily="arial"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="italic"
                />
            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/abbstract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/abbstract"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:fontFamily="arial"
                android:textColor="#000000"
                android:textSize="17sp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/introduction"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:fontFamily="arial"
                android:textColor="#000000"
                android:textSize="17sp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/literature_review"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:fontFamily="arial"
                android:textColor="#000000"
                android:textSize="17sp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/main_body" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:fontFamily="arial"
                android:textColor="#000000"
                android:textSize="17sp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/conclusion"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:fontFamily="arial"
                android:textColor="#000000"
                android:textSize="17sp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/citations"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Citations Example"
                android:layout_centerHorizontal="true"
                android:fontFamily="arial"
                android:textColor="#000000"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold|italic"
                />
            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/citations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/two_authors_apa"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:fontFamily="arial"
                android:textColor="#000000"
                android:textSize="17sp"
                android:autoLink="web"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/citation_process"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>