<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:text="@string/fragment_name_harvard"
                android:fontFamily="Arial"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="#bfbfbf"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="13dp"
                android:background="#ffffff"
                android:fontFamily="Arial"
                android:textColor="#000000"
                android:autoLink="web"
                android:lineSpacingMultiplier="1.35"
                android:text="@string/first_harvard"
                android:textSize="17sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Harvard style first page"
                android:layout_centerHorizontal="true"
                android:fontFamily="Arial"
                android:textColor="#000000"
                android:autoLink="web"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                />
            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/first_page_harvard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tooltipText=""
                android:src="@drawable/first_page_harvard"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="13dp"
                android:background="#ffffff"
                android:autoLink="web"
                android:fontFamily="arial"
                android:textColor="#000000"
                android:textSize="17sp"
                android:lineSpacingMultiplier="1.35"
                android:text="@string/last_harvard"
                 />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Refrences list in Harvard Style"
                android:layout_centerHorizontal="true"
                android:fontFamily="arial"
                android:textColor="#000000"
                android:autoLink="web"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold|italic"
                />
            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/refrence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tooltipText=""
                android:src="@drawable/harvard_refrence"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>