<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:text="@string/fragment_name_chicago"
                android:textSize="25sp"
                android:fontFamily="Arial"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="#999999"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="13dp"
                android:background="#ffffff"
                android:fontFamily="Arial"
                android:textColor="#000000"
                android:autoLink="web"
                android:textSize="17sp"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/first_chicago"
                 />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="First page in Chicago"
                android:layout_centerHorizontal="true"
                android:fontFamily="Arial"
                android:textColor="#000000"
                android:autoLink="web"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold|italic"
                />
            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/first_pageid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:src="@drawable/first_page"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Footnotes in Chicago"
                android:layout_centerHorizontal="true"
                android:fontFamily="Arial"
                android:textColor="#000000"
                android:autoLink="web"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold|italic"
                />
            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/footnotesid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:src="@drawable/footnotes"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Endnotes in Chicago"
                android:layout_centerHorizontal="true"
                android:fontFamily="Arial"
                android:textColor="#000000"
                android:autoLink="web"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold|italic"
                />
            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/endnotesid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:src="@drawable/endnotes"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="13dp"
                android:background="#ffffff"
                android:fontFamily="Arial"
                android:textColor="#000000"
                android:textSize="17sp"
                android:autoLink="web"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/last_chicago"
                 />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bibliography in Chicago"
                android:layout_centerHorizontal="true"
                android:fontFamily="Arial"
                android:textColor="#000000"
                android:gravity="center"
                android:autoLink="web"
                android:textSize="17sp"
                android:textStyle="bold|italic"
                />
            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/chicago_biblioid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Bibliography in Chicago"
                android:src="@drawable/chicago_biblio"/>
        </LinearLayout>




    </ScrollView>

</RelativeLayout>